--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "ab",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.13",
-    "@types/react": "17.0.38",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9",
-    "typescript": "4.5.5"
-  }
+	"name": "ab",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"check-types": "tsc --pretty --noEmit",
+		"check-format": "prettier --check .",
+		"check-lint": "eslint . --ext ts --ext tsx --ext js",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"next": "12.0.9",
+		"next-i18next": "^10.2.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.13",
+		"@types/react": "17.0.38",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@typescript-eslint/parser": "^5.10.1",
+		"eslint": "^8.8.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-next": "12.0.9",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-standard": "^16.0.3",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^5.2.0",
+		"eslint-plugin-react": "^7.28.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"prettier": "^2.5.1",
+		"typescript": "4.5.5"
+	}
 }
