--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		"allowJs": true,
 		"allowUnreachableCode": false,
 		"allowUnusedLabels": false,
+		"baseUrl": ".",
 		"declaration": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
@@ -14,6 +15,9 @@
 		"noEmit": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitReturns": true,
+		"paths": {
+			"@components/*": ["components/*"]
+		},
 		"pretty": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
@@ -22,6 +26,6 @@
 		"target": "es2018",
 		"incremental": true
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/src/Image.js"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "pages/src/Image.js"],
 	"exclude": ["node_modules"]
 }
