--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"next": "12.0.9",
+		"next": "^12.1.0",
 		"next-i18next": "^10.2.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2"
 	},
 	"devDependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-brands-svg-icons": "^5.15.4",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.15",
+		"@headlessui/react": "^1.2.0",
+		"@heroicons/react": "^1.0.1",
+		"@material-ui/core": "^4.11.4",
 		"@types/node": "17.0.13",
 		"@types/react": "17.0.38",
+		"@types/react-google-recaptcha": "^2.1.4",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
+		"autoprefixer": "^10.4.2",
 		"eslint": "^8.8.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-next": "12.0.9",
@@ -32,7 +41,12 @@
 		"eslint-plugin-promise": "^5.2.0",
 		"eslint-plugin-react": "^7.28.0",
 		"eslint-plugin-react-hooks": "^4.3.0",
+		"postcss": "^8.4.6",
 		"prettier": "^2.5.1",
-		"typescript": "4.5.5"
+		"react-google-recaptcha": "^2.1.0",
+		"sweetalert2": "^10.16.6",
+		"tailwindcss": "^3.0.22",
+		"typescript": "4.5.5",
+		"yup": "^0.32.9"
 	}
 }
