--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-dom": "17.0.2"
 	},
 	"devDependencies": {
+		"@fortawesome/fontawesome-common-types": "^0.3.0",
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-brands-svg-icons": "^5.15.4",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -26,6 +27,7 @@
 		"@material-ui/core": "^4.11.4",
 		"@types/node": "17.0.13",
 		"@types/react": "17.0.38",
+		"@types/react-fontawesome": "^1.6.5",
 		"@types/react-google-recaptcha": "^2.1.4",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
