--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "ab",
 	"private": true,
 	"scripts": {
+		"analyze": "cross-env ANALYZE=true npm run build",
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
@@ -11,7 +12,9 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@next/bundle-analyzer": "^12.1.0",
 		"next": "^12.1.0",
+		"next-compose-plugins": "^2.2.1",
 		"next-i18next": "^10.2.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2"
@@ -32,6 +35,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"autoprefixer": "^10.4.2",
+		"cross-env": "^7.0.3",
 		"eslint": "^8.8.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-next": "12.0.9",
