--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@headlessui/react": "^1.2.0",
 		"@heroicons/react": "^1.0.1",
 		"@material-ui/core": "^4.11.4",
+		"@sendgrid/mail": "^7.6.2",
 		"@types/node": "17.0.13",
 		"@types/react": "17.0.38",
 		"@types/react-fontawesome": "^1.6.5",
