--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
 		"@headlessui/react": "^1.2.0",
 		"@heroicons/react": "^1.0.1",
 		"@material-ui/core": "^4.11.4",
-		"@sendgrid/mail": "^7.6.2",
 		"@types/node": "17.0.13",
+		"@types/nodemailer": "^6.4.4",
 		"@types/react": "17.0.38",
 		"@types/react-fontawesome": "^1.6.5",
 		"@types/react-google-recaptcha": "^2.1.4",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"autoprefixer": "^10.4.2",
-		"cross-env": "^7.0.3",
+		"dotenv": "^16.0.1",
 		"eslint": "^8.8.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-next": "12.0.9",
@@ -48,6 +48,7 @@
 		"eslint-plugin-promise": "^5.2.0",
 		"eslint-plugin-react": "^7.28.0",
 		"eslint-plugin-react-hooks": "^4.3.0",
+		"nodemailer": "^6.7.3",
 		"postcss": "^8.4.6",
 		"prettier": "^2.5.1",
 		"react-google-recaptcha": "^2.1.0",
