--- a/.github/workflows/deploy-now.yaml
+++ b/.github/workflows/deploy-now.yaml
@@ -39,6 +39,7 @@ jobs:
         run: |
           npm ci
           npm run build
+          npm run start
 
       - name: Deploy to IONOS
         if: ${{ steps.project.outputs.deployment-enabled == 'true' }}
