--- a/.github/workflows/deploy-now.yaml
+++ b/.github/workflows/deploy-now.yaml
@@ -38,7 +38,7 @@ jobs:
           SITE_URL: ${{ steps.project.outputs.site-url }}
         run: |
           npm ci
-          npm run export
+          npm run build
 
       - name: Deploy to IONOS
         if: ${{ steps.project.outputs.deployment-enabled == 'true' }}
