--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"export": "next build && next export",
-		"start": "next start",
+		"start": "NODE_ENV=production node server.js",
 		"check-types": "tsc --pretty --noEmit",
 		"check-format": "prettier --check .",
 		"check-lint": "eslint . --ext ts --ext tsx --ext js",
