--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"autoprefixer": "^10.4.2",
 		"dotenv": "^16.0.1",
 		"eslint": "^8.21.0",
+		"globby": "^11.0.1",
 		"nodemailer": "^6.7.3",
 		"postcss": "^8.4.6",
 		"prettier": "^2.5.1",
