--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
 		"@next/bundle-analyzer": "^12.1.0",
 		"next": "^12.1.0",
 		"next-compose-plugins": "^2.2.1",
+		"next-plugin-preact": "^3.0.6",
 		"next-i18next": "^10.2.0",
-		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"preact": "^10.5.15",
+		"preact-render-to-string": "^5.1.19",
+		"react": "npm:@preact/compat@^17.0.2",
+		"react-dom": "npm:@preact/compat@^17.0.2"
 	},
 	"devDependencies": {
 		"@fortawesome/fontawesome-common-types": "^0.3.0",
@@ -35,6 +38,7 @@
 		"@types/react-fontawesome": "^1.6.5",
 		"@types/react-google-recaptcha": "^2.1.4",
 		"autoprefixer": "^10.4.2",
+		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.1",
 		"eslint": "^8.21.0",
 		"globby": "^11.0.1",
