--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@headlessui/react": "^1.2.0",
 		"@heroicons/react": "^1.0.1",
 		"@material-ui/core": "^4.11.4",
+		"@types/gtag.js": "^0.0.11",
 		"@types/node": "17.0.13",
 		"@types/nodemailer": "^6.4.4",
 		"@types/react": "17.0.38",
