--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"@next/bundle-analyzer": "^12.1.0",
 		"next": "^12.2.5",
 		"next-compose-plugins": "^2.2.1",
-		"next-plugin-preact": "^3.0.7",
 		"next-i18next": "^10.2.0",
+		"next-plugin-preact": "^3.0.7",
 		"preact": "^10.5.15",
 		"preact-render-to-string": "^5.1.19",
 		"react": "npm:@preact/compat@^17.1.1",
@@ -32,6 +32,7 @@
 		"@headlessui/react": "^1.2.0",
 		"@heroicons/react": "^1.0.1",
 		"@material-ui/core": "^4.11.4",
+		"@svgr/webpack": "^6.4.0",
 		"@types/gtag.js": "^0.0.11",
 		"@types/node": "17.0.13",
 		"@types/nodemailer": "^6.4.4",
