--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
 		"@heroicons/react": "^1.0.1",
 		"@material-ui/core": "^4.11.4",
 		"@svgr/webpack": "^6.4.0",
+		"@tailwindcss/typography": "^0.5.7",
 		"@types/gtag.js": "^0.0.11",
+		"@types/markdown-it": "^12.2.3",
 		"@types/node": "17.0.13",
 		"@types/nodemailer": "^6.4.4",
 		"@types/react": "17.0.38",
@@ -44,6 +46,8 @@
 		"dotenv": "^16.0.1",
 		"eslint": "^8.21.0",
 		"globby": "^11.0.1",
+		"gray-matter": "^4.0.3",
+		"markdown-it": "^13.0.1",
 		"nodemailer": "^6.7.3",
 		"postcss": "^8.4.6",
 		"prettier": "^2.5.1",
