--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@next/bundle-analyzer": "^12.1.0",
+		"@vercel/analytics": "^1.0.2",
 		"next": "^12.2.5",
 		"next-compose-plugins": "^2.2.1",
 		"next-i18next": "^10.2.0",
