--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"postcss": "^8.4.6",
 		"prettier": "^2.5.1",
 		"react-google-recaptcha": "^2.1.0",
+		"resend": "^1.1.0",
 		"sweetalert2": "^10.16.6",
 		"tailwindcss": "^3.0.22",
 		"typescript": "4.5.5",
