--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"preact": "^10.5.15",
 		"preact-render-to-string": "^5.1.19",
 		"react": "npm:@preact/compat@^17.1.1",
-		"react-dom": "npm:@preact/compat@^17.1.1"
+		"react-dom": "npm:@preact/compat@^17.1.1",
+		"resend": "^0.15.1"
 	},
 	"devDependencies": {
 		"@fortawesome/fontawesome-common-types": "^0.3.0",
@@ -52,7 +53,6 @@
 		"postcss": "^8.4.6",
 		"prettier": "^2.5.1",
 		"react-google-recaptcha": "^2.1.0",
-		"resend": "^1.1.0",
 		"sweetalert2": "^10.16.6",
 		"tailwindcss": "^3.0.22",
 		"typescript": "4.5.5",
